--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "mongodb": "^5.1.0"
+    "mongodb": "^5.1.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
